fixed padding issue on mobile

--- a/skin/css/default.css
+++ b/skin/css/default.css
@@ -34,11 +34,6 @@ body {
   .carousel-caption h3 {
       color: #fff !important;
   }
-  @media (max-width: 600px) {
-    .carousel-caption {
-      display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
-    }
-  }
   .bg-1 {
       background: #2d2d30;
       color: #bdbdbd;
@@ -89,12 +84,6 @@ body {
   .nav-tabs li a {
       color: #777;
   }
-  #googleMap {
-      width: 100%;
-      height: 400px;
-      -webkit-filter: grayscale(100%);
-      filter: grayscale(100%);
-  }  
   .navbar {
       font-family: Montserrat, sans-serif;
       margin-bottom: 0;
@@ -146,3 +135,13 @@ body {
   textarea {
       resize: none;
   }
+  
+  
+@media (max-width: 600px) {
+	.carousel-caption {
+	  display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
+	}
+	#band {
+		padding: 40px 20px;
+	}
+}
